<resources>
    <string name="app_name">ShootIt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shoot_gym">Shoot the Gym!</string>
    <string name="shoot_library">Shoot the Library!</string>
    <string name="shoot_mather">Shoot Mather!</string>
    <string name="motto">Make it A Three-on-Three With One Click!</string>
    <string name="off_switch">Shoot No More!</string>
    <string name="add_friend">Add A Friend!</string>
    <string name="motto_layout">Motto Layout</string>
    <string name="shoot_button_layout">Shoot Button Layout</string>
    <string name="phone_number">Your Phone #</string>
    <string name="top_layout">Top Layout</string>
    <string name="friendshot_list">Friends Shot List</string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="title_activity_add_friendListFragment">Friend List Fragment</string>
    <string name="friends">Friends</string>
    <string name="friends_add_list">Add Friends</string>
    <string name="search_layout">Search Layout</string>
    <string name="add_plus">+</string>
    <string name="main_layout">Main Layout</string>
    <string name="friend_name_hint">Enter Friend\'s Name</string>
    <string name="friend_name_title">Friend\'s Name</string>
    <string name="friend_detail">Details about Friend Activity</string>
    <string name="addfriend_name_hint">Add Friend\'s Name!</string>
    <string name="addfriend_number">Add Friend\'s Number</string>
    <string name="addfriend_name_title">Friend\'s Name</string>
</resources>
