<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addfriend_name_title"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/addfriend_name"
        android:hint="@string/addfriend_name_hint"/>

    <EditText android:id="@+id/friend_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addfriend_number"/>

</LinearLayout>