<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friend_name_title"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/friend_name"
        android:hint="@string/friend_name_hint"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/friend_detail"
    style="?android:listSeparatorTextViewStyle"/>

    <Button android:id="@+id/friend_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

</LinearLayout>