<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".friends_shooting">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:id="@+id/motto_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motto"
            android:textSize="21sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/motto"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:id="@+id/top_layout">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off_switch"
            android:id="@+id/off_switch"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:id="@+id/add_friend"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone_number"
            android:hint="@string/phone_number"
            android:layout_weight="1"
            android:editable="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/motto_layout"
        android:id="@+id/shoot_button_layout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoot_gym"
            android:id="@+id/shoot_gym"
            android:layout_weight=".3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoot_library"
            android:id="@+id/shoot_library"
            android:layout_weight=".3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoot_mather"
            android:id="@+id/shoot_mather"
            android:layout_weight=".3"/>
    </LinearLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/shoot_button_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:id="@+id/friendshot_list">

        <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ListView
            android:id="@+id/lvItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >
        </ListView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

    </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation = "vertical"
            android:id = "@+id/friend_layout">

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>
